--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,10 +5,7 @@
 }
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #333;
-  color: #fff;
+  font-size: 16px;
+  color: #333;
 
-  h1 {
-    font-size: 80px;
-  }
 }
