--- a/src/styles/repositories.scss
+++ b/src/styles/repositories.scss
@@ -1,14 +1,17 @@
-section.repository-list{
+section.repository-list {
   margin: 40px;
 
   h1 {
     margin-bottom: 16px;
-  } 
+  }
 
   ul {
-    list-style:none;
+    list-style: none;
 
     li {
+      border: 1px dashed #8547e6;
+      padding: 9px;
+
       & + li {
         margin-top: 20px;
       }
